--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/img_logo"
         android:layout_width="126dp"
         android:layout_height="76dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -36,7 +36,7 @@
         app:layout_constraintVertical_bias="0.087" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/tv_titulo"
         android:layout_width="276dp"
         android:layout_height="57dp"
         android:text="@string/text_bienvenida_login"
@@ -51,53 +51,47 @@
         app:layout_constraintVertical_bias="0.217" />
 
     <EditText
-        android:id="@+id/etuser_login"
+        android:id="@+id/et_email"
         style="@style/EditTextRounded"
-        android:layout_width="199dp"
-        android:layout_height="34dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text="Name: "
-        android:textColor="#1C2B4D"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="282dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="60dp"
+        android:hint="Correo Electrónico"
+        android:inputType="textEmailAddress"
+        android:padding="12dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.726"
+        app:layout_constraintHorizontal_bias="0.875"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.364" />
+        app:layout_constraintTop_toBottomOf="@id/tv_titulo" />
 
     <EditText
-        android:id="@+id/etuser_login2"
+        android:id="@+id/et_password"
         style="@style/EditTextRounded"
-        android:layout_width="199dp"
-        android:layout_height="34dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text="Password:"
-        android:textColor="#1C2B4D"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="283dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:hint="Contraseña"
+        android:inputType="textPassword"
+        android:padding="12dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.726"
+        app:layout_constraintHorizontal_bias="0.875"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.471" />
+        app:layout_constraintTop_toBottomOf="@id/et_email" />
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="69dp"
-        android:layout_height="167dp"
+        android:layout_width="46dp"
+        android:layout_height="119dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.125"
+        app:layout_constraintHorizontal_bias="0.086"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.404"
+        app:layout_constraintVertical_bias="0.412"
         app:srcCompat="@drawable/passwor_user" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_ingresar"
+        android:id="@+id/btn_login"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:gravity="center"
@@ -108,10 +102,10 @@
         app:cornerRadius="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.53"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.6"
+        app:layout_constraintVertical_bias="0.606"
         app:rippleColor="#1C2B4D"
         app:strokeColor="@android:color/white"
         app:strokeWidth="3dp" />
@@ -133,13 +127,13 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.836"
+        app:layout_constraintVertical_bias="0.794"
         app:rippleColor="#1C2B4D"
         app:strokeColor="#1C2B4D"
         app:strokeWidth="3dp" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tv_recuperar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Recupera tu Contraseña"
@@ -148,10 +142,9 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.701" />
+        app:layout_constraintVertical_bias="0.677" />
 
     <TextView
         android:id="@+id/textView8"
@@ -162,13 +155,13 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.354"
+        app:layout_constraintHorizontal_bias="0.324"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.919" />
+        app:layout_constraintVertical_bias="0.894" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/tv_registro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/register"
@@ -177,21 +170,21 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.706"
+        app:layout_constraintHorizontal_bias="0.718"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.919" />
+        app:layout_constraintVertical_bias="0.894" />
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="50dp"
-        android:layout_height="35dp"
+        android:layout_width="45dp"
+        android:layout_height="26dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn_comenzar2"
-        app:layout_constraintHorizontal_bias="0.163"
+        app:layout_constraintHorizontal_bias="0.095"
         app:layout_constraintStart_toStartOf="@+id/btn_comenzar2"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.827"
+        app:layout_constraintVertical_bias="0.781"
         app:srcCompat="@drawable/gle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
